# opencontext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: DockerFile  app.js  index.html  style.css
openspec/changes/archive/2026-05-13-create-simple-webapp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-create-simple-webapp/specs/simple-webapp/: spec.md
openspec/specs/simple-webapp/: spec.md
src/opencontext/cli/: main.py  utils.py
src/opencontext/fetching/: git_diff.py  jira_retriever.py  spec_fetcher.py
src/opencontext/inference/: main.py
src/opencontext/pipeline/: vectorizer.py
webapp/: index.html  style.css
